# OpenChain

./: .env  .gitignore  CHANGELOG.md  CLAUDE.md  README.md  hello.txt  pyproject.toml
.claude/: settings.local.json
.github/workflows/: test.yml
docs/: roadmap.md
docs/superpowers/plans/: 2026-05-29-openchain-agent-implementation-plan.md  2026-05-29-openchain-v0.1.1-stabilization.md  2026-05-29-openchain-v0.1.2-security-hardening.md  2026-05-29-openchain-v0.2.0-agent-capability-expansion.md
docs/superpowers/specs/: 2026-05-29-openchain-agent-design.md
openchain/: __init__.py  agent.py  cli.py  db.py  model_registry.py  security.py  session.py
openchain/agent/: __init__.py  graph.py  nodes.py  state.py
openchain/api/: __init__.py  auth.py  request_audit.py  routes.py
openchain/tools/: __init__.py  base.py  bash_tool.py  file_tools.py  trace_export.py  web_tools.py
output/building-langchain-agents_data/: summary.json
skills/building-langchain-agents/: SKILL.md
skills/building-langchain-agents/references/: index.md  llms.md  other.md
tests/: __init__.py  conftest.py  test_agent_graph.py  test_api.py  test_api_auth.py  test_api_auth_enhanced.py  test_cli.py  test_cli_enhanced.py  test_compact.py  test_db.py  test_db_cleanup.py  test_db_lifecycle.py  test_error_routing.py  test_message_queue.py  test_model_registry.py  test_multi_model.py  test_sandbox.py  test_sandbox_enhanced.py  test_session.py  test_tool_execution.py  test_tools.py  test_trace_export.py
tests/stress/: __init__.py  test_concurrent_sessions.py  test_parallel_api.py
(+1 files in other folders)
